# APAeval

./: .RData  .Rhistory  .all-contributorsrc  .gitignore  CODE_OF_CONDUCT.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  apaeval_env.yaml
benchmarking_workflows/: README.md
benchmarking_workflows/JSON_templates/: setup.cfg
benchmarking_workflows/identification/: README.md  nextflow.config
benchmarking_workflows/quantification/: README.md  nextflow.config
docs/templates/: benchmark_specification.md
execution_workflows/: PR_review_guide.md  README.md  execution_output_specification.md  execution_workflow_file_specifications.md
execution_workflows/APA-Scan/: APA-Scan.py  README.md  blank_configuration.ini  configuration.ini  dryrun.sh  make_plots.py  methods.py  preprocess.py  rulegraph.sh  run_local.sh
execution_workflows/APAlyzer/: README.md  dryrun.sh  rulegraph.sh
execution_workflows/APAtrap/: .gitignore  Dockerfile  README.md  main.nf  nextflow.config  samplesheet_example_files.csv
execution_workflows/Aptardi/: Dockerfile  README.md  main.nf  nextflow.config  samplesheet.csv
execution_workflows/CSI-UTR/: .gitignore  (+9 more)
method_workflows/: PR_review_guide.md  README.md  method_workflow_file_specifications.md
nextflow/: main.nf  nextflow.config
openebench/: README.md
snakemake/: README.md
summary_workflows/: README.md  challenge_codes.md  parameter_codes.md  summary_input_specification.md
utils/: Dockerfile  README.md  gtfTobed.py
utils/matchPAS/: README.md  main.md  setup.cfg  setup.py
utils/matchPAS/src/matchPAS/: __init__.py  main.py
(+1132 files in other folders)
