[metadata]
name = matchPAS
version = 0.5.0
license = TBD
author = TBD
description = TBD
url = https://github.com/iRNA-COSI/APAeval
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.7
